--- a/starter-kit/app/package.json
+++ b/starter-kit/app/package.json
@@ -19,7 +19,11 @@
     "redux-thunk": "^2.3.0",
     "@trussworks/react-uswds": "^1.8.0",
     "react-hook-form": "^6.3.1",
-    "concurrently": "^5.3.0"
+    "concurrently": "^5.3.0",
+    "react-table": "^7.5.0",
+    "react-leaflet": "^2.7.0",
+    "leaflet": "^1.7.1",
+    "loglevel": "^1.7.0"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"gulp watch\"",
