Added Unit test stage for develop branch

--- a/.github/workflows/pipeline-trigger-on-tag-develop-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-tag-develop-branch.yml
@@ -20,6 +20,10 @@ jobs:
       run: |
         starter-kit/scripts/build.sh
 
+    - name: Unit Test
+      run: |
+        starter-kit/scripts/unitTests.sh
+
     - name: Deploy
       run: |
         starter-kit/scripts/deploy.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
