--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
 sonar.organization=us-epa-camd
 sonar.projectKey=US-EPA-CAMD_PI-1
-sonar.sources=starter-kit/app/src,starter-kit/posts-api,starter-kit/tasks-api/src
+sonar.sources=starter-kit/app,starter-kit/posts-api,starter-kit/tasks-api
