Updated properties file with debug information

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,10 @@
+sonar.host.url=https://sonarcloud.io
 sonar.organization=us-epa-camd
 sonar.projectKey=US-EPA-CAMD_PI-1
-sonar.sources=starter-kit/app,starter-kit/posts-api,starter-kit/tasks-api
+sonar.sources=starter-kit
+sonar.projectVersion=v0.0.1
+sonar.projectDescription="Starter Kit"
+sonar.links.scm=https://github.com/US-EPA-CAMD
+sonar.log.level=TRACE
+sonar.verbose=true
+sonar.showProfiling=true
