Changed the sonarscanner log verbose level

--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,5 +6,5 @@ sonar.projectVersion=v0.0.1
 sonar.projectDescription="Starter Kit"
 sonar.links.scm=https://github.com/US-EPA-CAMD
 sonar.log.level=TRACE
-sonar.verbose=true
+sonar.verbose=false
 sonar.showProfiling=true
