Changed the job names to be more accurate

--- a/.github/workflows/pipeline-trigger-on-tag-develop-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-tag-develop-branch.yml
@@ -10,7 +10,7 @@ on:
       - RC_TEST*
 
 jobs:
-  deploy:
+  Build-deploy:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
