--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -22,10 +22,12 @@ jobs:
       run: |
         starter-kit/scripts/build.sh
 
+    - name: Get Tag name if exists
+      run: echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
+
     - name: Unit Test
       run: |
         starter-kit/scripts/unitTests.sh
-        echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
       if: env.HEAD_TAG != ''
 
   Codescan:
