Debug echo statement added

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -25,7 +25,9 @@ jobs:
     - name: Get Tag name if exists
       run: |
         echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
+        echo "---------------"
         echo {{env.HEAD_TAG}}
+        echo "---------------"
 
     - name: Unit Test
       run: |
