missing '$' added in front of a variable

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -26,7 +26,7 @@ jobs:
       run: |
         echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
         echo "---------------"
-        echo {{env.HEAD_TAG}}
+        echo ${{env.HEAD_TAG}}
         echo "---------------"
 
     - name: Unit Test
