--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ develop ]
   push:
-    branches: [ feature/* ]
+    branches: [ feature/*, features/* ]
 
 jobs:
   build:
