--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -21,6 +21,10 @@ jobs:
       run: |
         starter-kit/scripts/build.sh
 
+    - name: Package App
+      run: |
+        starter-kit/scripts/package.sh
+
     - name: Unit Test
       run: |
         starter-kit/scripts/unitTests.sh
