Removed path restriction

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -5,7 +5,7 @@ on:
   pull_request:
     branches: [ develop ]
   push:
-    paths: [ "starter-kit/**" ]
+#    paths: [ "starter-kit/**" ]
     branches: [ feature/*, features/* ]
 
 jobs:
