Enabling deppoy command

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -21,13 +21,17 @@ jobs:
       run: |
         starter-kit/scripts/build.sh
 
-    - name: Package App
-      run: |
-        starter-kit/scripts/package.sh 
-
     - name: Unit Test
       run: |
         starter-kit/scripts/unitTests.sh
+
+    - name: Deploy
+      run: |
+        starter-kit/scripts/deploy.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
+
+    - name: Package App
+      run: |
+        starter-kit/scripts/package.sh 
 
   Codescan:
     runs-on: ubuntu-latest
