Commented out the lines in the workflow for packing and deployment stages

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -25,13 +25,13 @@ jobs:
       run: |
         starter-kit/scripts/unitTests.sh
 
-    - name: Package App
-      run: |
-        starter-kit/scripts/package.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
-
-    - name: Deploy App from S3
-      run: |
-        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} PI-1 v0.0 105
+#    - name: Package App
+#      run: |
+#        starter-kit/scripts/package.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
+#
+#    - name: Deploy App from S3
+#      run: |
+#        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} PI-1 v0.0 105
 
   Codescan:
     runs-on: ubuntu-latest
