--- a/starter-kit/app/package.json
+++ b/starter-kit/app/package.json
@@ -19,6 +19,8 @@
     "react-scripts": "3.4.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "redux-mock-store": "~1.5.4",
+    "redux-immutable-state-invariant": "2.1.0",
     "@trussworks/react-uswds": "^1.8.0",
     "react-hook-form": "^6.3.1",
     "concurrently": "^5.3.0",
