Added various environment variables for deployment into various environments

--- a/deployment.properties
+++ b/deployment.properties
@@ -1,3 +1,35 @@
-appname=PI-1
-version=v0.0
-build=105
+# Development 
+
+dev.appname=PI-1
+dev.version=v0.0
+dev.build=105
+
+rollback.dev.appname=PI-1
+rollback.dev.version=v0.0
+rollback.dev.build=105
+
+# Test
+
+test.appname=PI-1
+testdev.version=v0.0
+testdev.build=105
+
+rollback.test.appname=PI-1
+rollback.testdev.version=v0.0
+rollback.testdev.build=105
+
+# Stage
+
+stage.appname=PI-1
+stage.version=v0.0
+stage.build=105
+
+rollback.stage.appname=PI-1
+rollback.stage.version=v0.0
+rollback.stage.build=105
+
+# latest
+
+latest.appname=PI-1
+latest.version=v0.0
+latest.build=105
