Added line to ignore deployment.properties file for pipeline trigger

--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -7,6 +7,8 @@ on:
   push:
 #    paths: [ "starter-kit/**" ]
     branches: [ feature/*, features/* ]
+    paths-ignore:
+    - 'deployment.properties'
 
 jobs:
   build:
