--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -33,7 +33,7 @@ jobs:
 
     - name: Deploy App from S3
       run: |
-        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} 
+        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} 'dev'
 
   Codescan:
     runs-on: ubuntu-latest
