--- a/deployment.properties
+++ b/deployment.properties
@@ -4,32 +4,32 @@ dev.appname=PI-1
 dev.version=v0.0
 dev.build=105
 
-rollback.dev.appname=PI-1
-rollback.dev.version=v0.0
-rollback.dev.build=105
+rollback.dev.appname=
+rollback.dev.version=
+rollback.dev.build=
 
 # Test
 
-test.appname=PI-1
-testdev.version=v0.0
-testdev.build=105
+test.appname=
+testdev.version=
+testdev.build=
 
-rollback.test.appname=PI-1
-rollback.testdev.version=v0.0
-rollback.testdev.build=105
+rollback.test.appname=
+rollback.testdev.version=
+rollback.testdev.build=
 
 # Stage
 
-stage.appname=PI-1
-stage.version=v0.0
-stage.build=105
+stage.appname=
+stage.version=
+stage.build=
 
-rollback.stage.appname=PI-1
-rollback.stage.version=v0.0
-rollback.stage.build=105
+rollback.stage.appname=
+rollback.stage.version=
+rollback.stage.build=
 
 # latest
 
-latest.appname=PI-1
-latest.version=v0.0
-latest.build=105
+latest.appname=
+latest.version=
+latest.build=
