--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -8,7 +8,13 @@ on:
 #    paths: [ "starter-kit/**" ]
     branches: [ feature/*, features/* ]
     tags:
-      - v[0-9]+.[0-9]+_rc[0-9]+
+      - dev.v[0-9]+.[0-9]+_rc[0-9]+
+      - test.v[0-9]+.[0-9]+_rc[0-9]+
+      - stage.v[0-9]+.[0-9]+_rc[0-9]+
+      - rollback.dev.v[0-9]+.[0-9]+_rc[0-9]+
+      - rollback.test.v[0-9]+.[0-9]+_rc[0-9]+
+      - rollback.stage.v[0-9]+.[0-9]+_rc[0-9]+
+      
     paths-ignore:
       - 'deployment.properties'
 
