Changed rollback variable name to make it easier to extract values

--- a/deployment.properties
+++ b/deployment.properties
@@ -4,9 +4,9 @@ dev.appname=PI-1
 dev.version=v0.0
 dev.build=105
 
-rollback.dev.appname=
-rollback.dev.version=
-rollback.dev.build=
+rollback-dev.appname=
+rollback-dev.version=
+rollback-dev.build=
 
 # Test
 
@@ -14,9 +14,9 @@ test.appname=
 testdev.version=
 testdev.build=
 
-rollback.test.appname=
-rollback.testdev.version=
-rollback.testdev.build=
+rollback-test.appname=
+rollback-testdev.version=
+rollback-testdev.build=
 
 # Stage
 
@@ -24,9 +24,9 @@ stage.appname=
 stage.version=
 stage.build=
 
-rollback.stage.appname=
-rollback.stage.version=
-rollback.stage.build=
+rollback-stage.appname=
+rollback-stage.version=
+rollback-stage.build=
 
 # latest
 
