--- a/deployment.properties
+++ b/deployment.properties
@@ -30,6 +30,6 @@ rollback-stage.build=
 
 # latest
 
-latest.appname=
-latest.version=
-latest.build=
+latest.appname=PI-1
+latest.version=v0.0
+latest.build=166
