Added values to rollback property

--- a/deployment.properties
+++ b/deployment.properties
@@ -4,9 +4,9 @@ dev.appname=PI-1
 dev.version=v0.0
 dev.build=105
 
-rollback-dev.appname=
-rollback-dev.version=
-rollback-dev.build=
+rollback-dev.appname=PI-1
+rollback-dev.version=v0.0
+rollback-dev.build=105
 
 # Test
 
