--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,9 +1,60 @@
+# *	  Match zero or more characters
+# **	Match zero or more directories
+# ?	  Match a single character
+
+# REQUIRED
 sonar.host.url=https://sonarcloud.io
-sonar.organization=us-epa-camd
 sonar.projectKey=US-EPA-CAMD_PI-1
-sonar.sources=starter-kit
-sonar.projectVersion=v0.0
+sonar.organization=us-epa-camd
+
+# OPTIONAL
+sonar.projectName="EPA CAMD Business Systems EASEY"
 sonar.projectDescription="Starter Kit"
+sonar.projectVersion=v0.0
+sonar.sources=starter-kit/app/src
 sonar.links.scm=https://github.com/US-EPA-CAMD
-sonar.verbose=false
+sonar.verbose=true
 sonar.showProfiling=true
+sonar.sourceEncoding=UTF-8
+
+# Configure the files that should be ignored by code coverage calculations.
+#sonar.coverage.exclusions=
+
+# Configure the files that should be ignored by duplication detection.
+#sonar.cpd.exclusions=
+
+# Configure the files that should be completely ignored by the analysis.
+sonar.exlusions=logo.svg,uswds_assets/**/*
+#sonar.inclusions=
+#sonar.test.exclusions=
+#sonar.test.inclusions=
+
+# Languages
+#sonar.language=js
+
+# List of global variables.
+#sonar.javascript.globals=angular,goog,google,OpenLayers,d3,dojo,dojox,dijit,Backbone,moment,casper
+
+# List of file path patterns to be excluded from analysis of JavaScript files.
+#sonar.javascript.exclusions=serviceWorker.js,setupTests.js
+
+# List of environments names.
+#sonar.javascript.environments=amd,applescript,atomtest,browser,commonjs,couch,embertest,greasemonkey,jasmine,jest,jquery,meteor,mocha,mongo,nashorn,node,phantomjs,prototypejs,protractor,qunit,rhino,serviceworker,shared-node-browser,shelljs,webextensions,worker,wsh,yui
+
+# List of suffixes for files to analyze.
+#sonar.javascript.file.suffixes=.js,.jsx
+
+# Threshold for the maximum size of analyzed files (in kilobytes).
+#sonar.javascript.maxFileSize=1000
+
+# List of suffixes for files to analyze.
+#sonar.typescript.file.suffixes=.ts,.tsx
+
+# List of names used to address jQuery object.
+#sonar.javascript.jQueryObjectAliases=$,jQuery
+
+# Paths (absolute or relative) to the files with LCOV data.
+#sonar.javascript.lcov.reportPaths=
+
+# Path (relative to project base or absolute) to the tsconfig JSON file
+#sonar.typescript.tsconfigPath=
