--- a/.github/workflows/pipeline-trigger-on-feature-branch.yml
+++ b/.github/workflows/pipeline-trigger-on-feature-branch.yml
@@ -7,8 +7,8 @@ on:
   push:
 #    paths: [ "starter-kit/**" ]
     branches: [ feature/*, features/* ]
-    tags:
-      - '*.v[0-9]+.[0-9]+_rc[0-9]+'
+#    tags:
+#      - '*.v[0-9]+.[0-9]+_rc[0-9]+'
 
     paths-ignore:
       - 'deployment.properties'
@@ -34,13 +34,13 @@ jobs:
       run: |
         echo "::set-env name=HEAD_TAG::$(git tag --points-at HEAD)"
           
-    - name: Package App
-      run: |
-        starter-kit/scripts/package.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
-
-    - name: Deploy App from S3
-      run: |
-        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} ${{env.HEAD_TAG}}
+#    - name: Package App
+#      run: |
+#        starter-kit/scripts/package.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}}
+#
+#    - name: Deploy App from S3
+#      run: |
+#        starter-kit/scripts/deployFromS3.sh ${{secrets.CF_SERVICE_ACCOUNT_ID}} ${{secrets.CF_SERVICE_ACCOUNT_PASSWORD}} ${{env.HEAD_TAG}}
 
   Codescan:
     runs-on: ubuntu-latest
