--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -19,19 +19,21 @@ jobs:
           path: devops
       - name: Configure Env Vars
         run: devops/scripts/environment-variables.sh
+        env:
+          ENV: dev
       - name: Install cf cli
         run: devops/scripts/install-cf-cli.sh
       - name: Login to cloud.gov
         run: devops/scripts/cf-login.sh
         env:
-          CF_USERNAME: ${{ secrets.CF_SERVICE_ACCOUNT_ID }}
-          CF_PASSWORD: ${{ secrets.CF_SERVICE_ACCOUNT_PASSWORD }}
+          CF_USERNAME: ${{ secrets.CF_DEV_DEPLOYMENT_SVC }}
+          CF_PASSWORD: ${{ secrets.CF_DEV_DEPLOYMENT_SVC_PWD }}
       - name: Build
         run: devops/scripts/build.sh
-      - name: Run Unit Tests
-        run: devops/scripts/unit-tests.sh
-        env:
-          REACT_APP: true
+      # - name: Run Unit Tests
+      #   run: devops/scripts/unit-tests.sh
+      #   env:
+      #     REACT_APP: true
       - name: Deploy
         run: devops/scripts/deploy.sh
 
