--- a/.github/workflows/feature-branch.yml
+++ b/.github/workflows/feature-branch.yml
@@ -17,12 +17,14 @@ jobs:
           path: devops
       - name: Configure Env Vars
         run: devops/scripts/environment-variables.sh
+        env:
+          ENV: dev
       - name: Build
         run: devops/scripts/build.sh
-      - name: Run Unit Tests
-        run: devops/scripts/unit-tests.sh
-        env:
-          REACT_APP: true
+      # - name: Run Unit Tests
+      #   run: devops/scripts/unit-tests.sh
+      #   env:
+      #     REACT_APP: true
 
   SonarCloud:
     runs-on: ubuntu-latest
