feature/632 jest test coverage in Sonarcloud (#663)
* configuration to enable coverage report

* sonar properties and workflow changes to get unit test coverage in sonar cloud

* more unit test config for sonar cloud

* more changes for sonar cloud unit test coverage

Co-authored-by: jasonwhitehead <jasonwhitehad@cvpcorp.com>

--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"gulp watch\"",
     "build": "react-scripts build",
-    "test": "react-scripts test"
+    "test": "react-scripts test",
+    "test:cov": "react-scripts test --coverage --watchAll=false --testResultsProcessor ./node_modules/jest-sonar-reporter"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -58,11 +59,30 @@
     "gulp-replace": "^1.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "jest-sonar-reporter": "^2.0.0",
     "postcss-csso": "^4.0.0",
     "react-paginate": "^6.5.0",
     "react-test-renderer": "^16.13.1",
     "sass": "^1.26.10",
     "uswds": "^2.8.0",
     "uswds-gulp": "github:uswds/uswds-gulp"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!node_modules/",
+      "!src/App.js",
+      "!src/config.js",
+      "!src/serviceWorker.js",
+      "!src/index.js",
+      "!src/store/configureStore.dev.js",
+      "!src/store/actions/actionTypes.js",
+      "!src/store/reducers/index.js",
+      "!src/store/reducers/initialState.js",
+      "!src/utils/api/axiosSetup.js",
+      "!src/utils/api/setupTests.js",
+      "!src/utils/api/apiUtils.js",
+      "!src/utils/remoteLogging.js"
+    ]
   }
 }
