--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "start": "concurrently \"react-scripts start\" \"gulp watch\"",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "test:cov": "react-scripts test --coverage --watchAll=false --testResultsProcessor ./node_modules/jest-sonar-reporter"
+    "test:cov": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter"
   },
   "eslintConfig": {
     "extends": "react-app"
