--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux": "^4.0.5",
     "redux-immutable-state-invariant": "2.1.0",
     "redux-mock-store": "~1.5.4",
-    "redux-thunk": "^2.3.0"
+    "redux-thunk": "^2.3.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "scripts": {
     "start": "concurrently \"react-scripts start\" \"gulp watch\"",
