workflow changes to support version and publish date

--- a/manifest-vars.yml
+++ b/manifest-vars.yml
@@ -1,3 +1,4 @@
+#THIS FILE SHOULD CONTAIN DEV SETTINGS AND CI/CD WORKFLOW WILL CHANGE SETTINGS BASED ON ENV
 name: ui-portal
 host: easey-dev.app.cloud.gov
 environment: development
