styling changes completed

--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.0.0",
+    "react-data-table-component": "^6.11.7",
+    "react-data-table-component-extensions": "^1.5.2",
     "react-datepicker": "^3.7.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.1",
@@ -37,6 +39,7 @@
     "redux-mock-store": "~1.5.4",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
+    "styled-components": "^5.3.0",
     "uswds": "^2.11.1"
   },
   "scripts": {
@@ -67,7 +70,7 @@
     "enzyme-adapter-react-16": "^1.15.4",
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
-    "prop-types": "^15.7.2",
+    "prop-types": "^15.6.0",
     "react-paginate": "^6.5.0",
     "react-test-renderer": "^16.13.1"
   },
