--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.32",
     "@fortawesome/free-solid-svg-icons": "^5.15.1",
     "@fortawesome/react-fontawesome": "^0.1.14",
+    "@material-ui/core": "^4.11.4",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -14,7 +16,6 @@
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.2",
     "axios-retry": "^3.1.8",
-    "bootstrap": "^4.4.1",
     "check-prop-types": "^1.1.2",
     "concurrently": "^5.3.0",
     "leaflet": "^1.7.1",
