--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,13 +2,13 @@
 # **	Match zero or more directories
 # ?	  Match a single character
 
-sonar.projectName="EPA CAMD EASEY UI Portal"
-sonar.projectDescription="UI portal for the EPA CAMD Business Systems EASEY Application"
+sonar.projectName="EPA CAMD EASEY ECMPS UI"
+sonar.projectDescription="EPA CAMD Emissions Collection & Monitor Plan System (ECMPS) website application"
 sonar.projectVersion=v0.0
 
 sonar.organization=us-epa-camd
 sonar.host.url=https://sonarcloud.io
-sonar.projectKey=US-EPA-CAMD_easey-ui
+sonar.projectKey=US-EPA-CAMD_easey-ecmps-ui
 sonar.links.scm=https://github.com/US-EPA-CAMD
 
 sonar.language=js
