--- a/package.json
+++ b/package.json
@@ -3,9 +3,6 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.32",
-    "@fortawesome/free-solid-svg-icons": "^5.15.1",
-    "@fortawesome/react-fontawesome": "^0.1.14",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^4.2.4",
@@ -17,7 +14,6 @@
     "axios-mock-adapter": "^1.18.2",
     "axios-retry": "^3.1.8",
     "check-prop-types": "^1.1.2",
-    "concurrently": "^5.3.0",
     "leaflet": "^1.7.1",
     "loglevel": "^1.7.0",
     "node-sass": "^4.14.1",
@@ -30,7 +26,6 @@
     "react-datepicker": "^3.7.0",
     "react-dom": "^16.13.1",
     "react-hook-form": "^6.3.1",
-    "react-icons": "^4.2.0",
     "react-leaflet": "^2.7.0",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.1",
@@ -42,7 +37,6 @@
     "redux-immutable-state-invariant": "2.1.0",
     "redux-mock-store": "~1.5.4",
     "redux-thunk": "^2.3.0",
-    "resize-observer-polyfill": "^1.5.1",
     "styled-components": "^5.3.0",
     "uswds": "2.10.3"
   },
@@ -51,7 +45,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test --coverage --watchAll=false --testResultsProcessor=jest-sonar-reporter",
     "test:dev": "react-scripts test",
-    "dev": "concurrently \"react-scripts start\" \"gulp watch\""
+    "dev": "react-scripts start"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -75,7 +69,6 @@
     "jest-enzyme": "^7.1.2",
     "jest-sonar-reporter": "^2.0.0",
     "prop-types": "^15.7.2",
-    "react-paginate": "^6.5.0",
     "react-test-renderer": "^16.13.1"
   },
   "jest": {
