--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -15,7 +15,7 @@ sonar.language=js
 sonar.sources=src
 sonar.verbose=true
 sonar.showProfiling=true
-sonar.exlusions=logo.svg,uswds_assets/**/*
+sonar.exlusions=logo.svg,uswds_assets/**/*,src/App.js,src/config.js,src/serviceWorker.js,src/index.js,configureStore.dev.js,actionTypes.js,src/store/reducers/index.js,src/store/reducers/initialState.js,src/utils/api/axiosSetup.js,src/utils/api/setupTests.js,src/utils/api/apiUtils.js,src/utils/api/apiUtils.js
 
 sonar.tests=src
 sonar.test.inclusions=src/**/*.test.js,src/**/*.test.jsx
