--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "check-prop-types": "^1.1.2",
     "leaflet": "^1.7.1",
     "loglevel": "^1.7.0",
-    "node-sass": "^4.14.1",
     "prettier": "^2.2.1",
     "react": "^16.13.1",
     "react-countdown-circle-timer": "^2.5.3",
@@ -36,6 +35,7 @@
     "redux-immutable-state-invariant": "2.1.0",
     "redux-mock-store": "~1.5.4",
     "redux-thunk": "^2.3.0",
+    "sass": "^1.36.0",
     "styled-components": "^5.3.0",
     "uswds": "2.10.3"
   },
