--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "us-epa-camd-react-starter-app",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "dependencies": {
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
