--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -1,6 +1,8 @@
 host: easey-tst.app.cloud.gov
 environment: testing
 memory: 1024M
-inactivityDurationMinutes: 14.5
+inactivityLogoutDuration: 14.5
 activityPollingFrequencySeconds: 1
 activityCountdownDurationSeconds: 30
+inactivityDuration: 2
+refreshTokenRate: 13
