--- a/manifest-vars.test.yml
+++ b/manifest-vars.test.yml
@@ -1,8 +1,6 @@
 host: easey-tst.app.cloud.gov
 environment: testing
 memory: 1024M
-inactivityLogoutDuration: 14.5
-activityPollingFrequencySeconds: 1
-activityCountdownDurationSeconds: 30
-inactivityDuration: 2
-refreshTokenRate: 13
+inactivityDurationCheckoutMinutes: 20
+refreshTokenRateMinutes: 15
+inactivityDurationLogoutMinutes: 20
