--- a/manifest.yml
+++ b/manifest.yml
@@ -5,17 +5,20 @@ applications:
       - nodejs_buildpack
     env:
       OPTIMIZE_MEMORY: true
-      PUBLIC_URL: https://((host))/((path))      
+      PUBLIC_URL: https://((host))/((path))
       REACT_APP_EASEY_ECMPS_UI_ENV: ((environment))
       REACT_APP_EASEY_ECMPS_UI_HOST: ((host))
-      REACT_APP_EASEY_ECMPS_UI_PATH: /((path))      
+      REACT_APP_EASEY_ECMPS_UI_PATH: /((path))
       REACT_APP_EASEY_MDM_API: https://((host))/api/master-data-mgmt
       REACT_APP_EASEY_FACILITIES_API: https://((host))/api/facility-mgmt
       REACT_APP_EASEY_EMISSIONS_API: https://((host))/api/emissions-mgmt
       REACT_APP_EASEY_MONITOR_PLAN_API: https://((host))/api/monitor-plan-mgmt
       REACT_APP_EASEY_AUTH_API: https://((host))/api/auth-mgmt
-      REACT_APP_EASEY_ECMPS_UI_INACTIVITY_DURATION_MINUTES: ((inactivityDurationMinutes))
+      REACT_APP_EASEY_ECMPS_UI_INACTIVITY_DURATION_CHECKOUT_MINUTES: ((inactivityDurationCheckoutMinutes))
       REACT_APP_EASEY_ECMPS_UI_ACTIVITY_POLLING_FREQUENCY_SECONDS: ((activityPollingFrequencySeconds))
       REACT_APP_EASEY_ECMPS_UI_ACTIVITY_COUNTDOWN_DURATION_SECONDS: ((activityCountdownDurationSeconds))
+      REACT_APP_EASEY_ECMPS_UI_REFRESH_TOKEN_RATE_MINUTES: ((refreshTokenRateMinutes))
+      REACT_APP_EASEY_ECMPS_UI_INACTIVITY_DURATION_LOGOUT_MINUTES: ((inactivityDurationLogoutMinutes))
+      REACT_APP_EASEY_ECMPS_UI_PAGINATION_PER_PAGE: ((paginationPerPage))
     routes:
       - route: ((host))/((path))
