--- a/manifest-vars.staging.yml
+++ b/manifest-vars.staging.yml
@@ -1,4 +1,5 @@
 host: easey-stg.app.cloud.gov
+apiHost: api.epa.gov/easey/staging
 environment: staging
 memory: 2048M
 inactivityDurationCheckoutMinutes: 20
