--- a/manifest.yml
+++ b/manifest.yml
@@ -9,11 +9,11 @@ applications:
       REACT_APP_EASEY_ECMPS_UI_ENV: ((environment))
       REACT_APP_EASEY_ECMPS_UI_HOST: ((host))
       REACT_APP_EASEY_ECMPS_UI_PATH: /((path))
-      REACT_APP_EASEY_MDM_API: https://((host))/api/master-data-mgmt
-      REACT_APP_EASEY_FACILITIES_API: https://((host))/api/facility-mgmt
-      REACT_APP_EASEY_EMISSIONS_API: https://((host))/api/emissions-mgmt
-      REACT_APP_EASEY_MONITOR_PLAN_API: https://((host))/api/monitor-plan-mgmt
-      REACT_APP_EASEY_AUTH_API: https://((host))/api/auth-mgmt
+      REACT_APP_EASEY_MDM_API: https://((apiHost))/master-data-mgmt
+      REACT_APP_EASEY_FACILITIES_API: https://((apiHost))/facility-mgmt
+      REACT_APP_EASEY_EMISSIONS_API: https://((apiHost))/emissions-mgmt
+      REACT_APP_EASEY_MONITOR_PLAN_API: https://((apiHost))/monitor-plan-mgmt
+      REACT_APP_EASEY_AUTH_API: https://((apiHost))/auth-mgmt
       REACT_APP_EASEY_ECMPS_UI_INACTIVITY_DURATION_CHECKOUT_MINUTES: ((inactivityDurationCheckoutMinutes))
       REACT_APP_EASEY_ECMPS_UI_ACTIVITY_POLLING_FREQUENCY_SECONDS: ((activityPollingFrequencySeconds))
       REACT_APP_EASEY_ECMPS_UI_ACTIVITY_COUNTDOWN_DURATION_SECONDS: ((activityCountdownDurationSeconds))
