--- a/package.json
+++ b/package.json
@@ -1,6 +1,4 @@
 {
-  "name": "us-epa-camd-react-starter-app",
-  "version": "1.0.0",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.4",
@@ -9,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@trussworks/react-uswds": "^2.3.0",
+    "@us-epa-camd/easey-design-system": "1.12.0",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.2",
@@ -35,6 +34,10 @@
     "sass": "^1.36.0",
     "styled-components": "^5.3.0",
     "uswds": "2.12.1"
+  },
+  "resolutions": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
