--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^3.7.0",
     "react-dom": "^17.0.2",
     "react-ga": "^3.3.0",
+    "react-gtm-module": "^2.0.11",
     "react-hook-form": "^6.3.1",
     "react-pdf": "^5.3.2",
     "react-redux": "^7.2.1",
