Added API key, and Google Analytics to devops

--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -47,5 +47,12 @@ jobs:
         env:
           CF_USERNAME: ${{ secrets.CF_DEV_DEPLOYMENT_SVC }}
           CF_PASSWORD: ${{ secrets.CF_DEV_DEPLOYMENT_SVC_PWD }}
+      - name: Init Application
+        run: devops/scripts/cf-app-init.sh
+      - name: Configure Env Vars (secrets)
+        run: |
+          cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
+        env:
+          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_API_KEY }}
       - name: Deploy
         run: devops/scripts/deploy.sh
