--- a/manifest-vars.prod.yml
+++ b/manifest-vars.prod.yml
@@ -5,3 +5,5 @@ memory: 2048M
 inactivityDurationCheckoutMinutes: 20
 refreshTokenRateMinutes: 15
 inactivityDurationLogoutMinutes: 20
+googleAnalyticsEnabled: "true"
+googleAnalyticsPublicContainerId: "GTM-L8ZB"
