--- a/.github/workflows/develop-branch.yml
+++ b/.github/workflows/develop-branch.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   Build-Test-Deploy:
     runs-on: ubuntu-latest
+    environment:
+      name: Dev
+      url: https://easey-dev.app.cloud.gov/ecmps
     steps:
       - name: Checkout repo
         uses: actions/checkout@v2
@@ -53,6 +56,6 @@ jobs:
         run: |
           cf set-env $APP_NAME REACT_APP_ECMPS_API_KEY $REACT_APP_ECMPS_API_KEY
         env:
-          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_API_KEY }}
+          REACT_APP_ECMPS_API_KEY: ${{ secrets.ECMPS_NON_PROD_API_KEY }}
       - name: Deploy
         run: devops/scripts/deploy.sh
