--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@trussworks/react-uswds": "^2.3.0",
-    "@us-epa-camd/easey-design-system": "1.12.0",
+    "@us-epa-camd/easey-design-system": "1.13.4",
     "@welldone-software/why-did-you-render": "^6.2.0",
     "axios": "^0.21.1",
     "axios-mock-adapter": "^1.18.2",
@@ -42,6 +42,7 @@
     "browserslist": "^4.16.5",
     "glob-parent": "^5.1.2",
     "immer": "^9.0.6",
+    "json-schema": "^0.4.0",
     "node-notifier": "^8.0.1",
     "nth-check": "^2.0.1",
     "object-path": "^0.11.8",
